카카오 생활 링크

--- a/html/header.html
+++ b/html/header.html
@@ -6,7 +6,7 @@
   </nav>
   <nav class="nav_gnb">
     <ul class="list_gnb">
-      <li><a href="#">카카오 생활</a></li>
+      <li><a href="/html/kakaolife.html" target="_">카카오 생활</a></li>
       <li><a href="/html/krewstory.html" target="_">크루 이야기</a></li>
       <li><a href="#">진행중공고</a></li>
       <li><a href="#">테크인터십</a></li>
