웃 어디있니 추가

--- a/html/header.html
+++ b/html/header.html
@@ -8,7 +8,7 @@
     <ul class="list_gnb">
       <li><a href="/html/kakaolife.html" target="_">카카오 생활</a></li>
       <li><a href="/html/krewstory.html" target="_">크루 이야기</a></li>
-      <li><a href="#">진행중공고</a></li>
+      <li><a href="/html/findDiff.html">웃 어디 있니</a></li>
       <li><a href="#">테크인터십</a></li>
       <li><a href="#">지원안내</a></li>
       <li><a href="#">나의지원서</a></li>
